--- a/style.css
+++ b/style.css
@@ -1,60 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+:root {
+  --mainColor: #eaeaea;
+  --secondaryColor: #fff;
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  --borderColor: #c1c1c1;
+
+  --mainText: black;
+  --secondaryText: #4b5156;
 }
 
+html,
 body {
-    background-image: url("./fireworks.jpg");
-    background-size: cover;
-    background-position: center center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    font-family: "Poppins", sans-serif;
-    color: antiquewhite;
-    text-shadow: 4px 4px 10px black;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
-h1 {
-    font-weight: normal;
-    font-size: 4rem;
-    margin-top: 5rem;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
+  color: var(--mainText);
 }
 
-.countdown-container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.big-text {
-    font-weight: bold;
-    font-size: 6rem;
-    line-height: 1;
-    margin: 1rem 2rem;
-}
-
-.countdown-el {
-    text-align: center;
-}
-
-.countdown-el span {
-    font-size: 1.3rem;
-}
-footer {
-    font-weight: lighter;
-    font-size: 0.8rem;
-    height: 50px;
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    padding: 20px;
+p,
+li,
+span,
+label,
+input,
+textarea {
 }
