--- a/style.css
+++ b/style.css
@@ -21,7 +21,9 @@ h4,
 h5,
 h6,
 strong {
+  font-family: "Russo One", sans-serif;
   color: var(--mainText);
+  font-weight: 500;
 }
 
 p,
@@ -30,4 +32,57 @@ span,
 label,
 input,
 textarea {
+  color: var(--secondaryText);
+  font-family: "Roboto Mono", monospace;
+}
+
+a {
+  text-decoration: none;
+  color: #13a2b8;
+}
+
+ul {
+  list-style: none;
+}
+
+h1 {
+  font-size: 56px;
+}
+h1 {
+  font-size: 36px;
+}
+h1 {
+  font-size: 28px;
+}
+h1 {
+  font-size: 24px;
+}
+h1 {
+  font-size: 20px;
+}
+h1 {
+  font-size: 16px;
+}
+
+.s1 {
+  background-color: var(--mainColor);
+  border-bottom: 1px solid var(--borderColor);
+  overflow: auto;
+}
+
+.s2 {
+  background-color: var(--secondaryColor);
+  border-bottom: 1px solid var(--borderColor);
+  overflow: auto;
+}
+
+.main-container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 1200px) {
+  .main-container {
+    width: 95%;
+  }
 }
