--- a/style.css
+++ b/style.css
@@ -81,6 +81,44 @@ h1 {
   margin: 0 auto;
 }
 
+.greeting-wrapper {
+  display: grid;
+  text-align: center;
+  align-content: center;
+  border: 2px dashed lightcoral;
+  min-height: 10em;
+}
+
+.intro-wrapper {
+  background-color: var(--secondaryColor);
+  border: 1px solid var(--borderColor);
+
+  -webkit-box-shadow: 21px 10px 23px 0px rgba(0, 0, 0, 0.69);
+  -moz-box-shadow: 21px 10px 23px 0px rgba(0, 0, 0, 0.69);
+  box-shadow: 21px 10px 23px 0px rgba(0, 0, 0, 0.69);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 3em 30em;
+  grid-template-areas:
+    "nav-wrapper nav-wrapper"
+    "left-column right-column";
+}
+
+.nav-wrapper {
+  grid-area: nav-wrapper;
+  border: 1px dashed lightcoral;
+}
+
+.left-column {
+  grid-area: left-column;
+  border: 1px dashed lightcoral;
+}
+
+.right-column {
+  grid-area: right-column;
+  border: 1px dashed lightcoral;
+}
+
 @media screen and (max-width: 1200px) {
   .main-container {
     width: 95%;
