membuat navigation bar

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 h1,
@@ -38,7 +39,7 @@ textarea {
 
 a {
   text-decoration: none;
-  color: #13a2b8;
+  color: #17a2b8;
 }
 
 ul {
@@ -48,19 +49,19 @@ ul {
 h1 {
   font-size: 56px;
 }
-h1 {
+h2 {
   font-size: 36px;
 }
-h1 {
+h3 {
   font-size: 28px;
 }
-h1 {
+h4 {
   font-size: 24px;
 }
-h1 {
+h5 {
   font-size: 20px;
 }
-h1 {
+h6 {
   font-size: 16px;
 }
 
@@ -92,10 +93,11 @@ h1 {
 .intro-wrapper {
   background-color: var(--secondaryColor);
   border: 1px solid var(--borderColor);
+  border-radius: 5px 5px 0 0;
 
-  -webkit-box-shadow: 21px 10px 23px 0px rgba(0, 0, 0, 0.69);
-  -moz-box-shadow: 21px 10px 23px 0px rgba(0, 0, 0, 0.69);
-  box-shadow: 21px 10px 23px 0px rgba(0, 0, 0, 0.69);
+  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 3em 30em;
@@ -105,18 +107,61 @@ h1 {
 }
 
 .nav-wrapper {
+  border-radius: 5px 5px 0 0;
   grid-area: nav-wrapper;
-  border: 1px dashed lightcoral;
+  border-bottom: 1px solid var(--borderColor);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--mainColor);
+}
+
+#navigation {
+  margin: 0;
+  padding: 10px;
+}
+
+#navigation li {
+  display: inline-block;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.dots-wrapper {
+  display: flex;
+  padding: 10;
+}
+
+#dot-1 {
+  background-color: #fc6058;
+}
+
+#dot-2 {
+  background-color: #fec02f;
+}
+
+#dot-3 {
+  background-color: #2aca3e;
+}
+
+.browser-dot {
+  background-color: black;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+
+  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  margin: 5px;
 }
 
 .left-column {
   grid-area: left-column;
-  border: 1px dashed lightcoral;
 }
 
 .right-column {
   grid-area: right-column;
-  border: 1px dashed lightcoral;
 }
 
 @media screen and (max-width: 1200px) {
