menambah about section

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ strong {
   font-weight: 500;
 }
 
+a,
 p,
 li,
 span,
@@ -272,6 +273,26 @@ h6 {
 #corner-bl {
   bottom: -5px;
   left: -5px;
+}
+
+.about-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  padding-bottom: 50px;
+  padding-top: 50px;
+  gap: 100px;
+}
+
+#skills {
+  display: flex;
+  justify-content: center;
+  background-color: var(--previewShadow);
+}
+
+.social-links {
+  display: grid;
+  align-content: center;
+  text-align: center;
 }
 
 @media screen and (max-width: 1200px) {
