--- a/style.css
+++ b/style.css
@@ -1,102 +1,84 @@
-:root {
-  --mainColor: #eaeaea;
-  --secondaryColor: #fff;
+:root{
+	--mainColor:#eaeaea;
+	--secondaryColor:#fff;
 
-  --borderColor: #c1c1c1;
+	--borderColor:#c1c1c1;
 
-  --mainText: black;
-  --secondaryText: #4b5156;
+	--mainText:black;
+	--secondaryText:#4b5156;
 
-  --themeDotBorder: #24292e;
+	--themeDotBorder:#24292e;
 
-  --previewBg: rgb(251, 249, 243, 0.8);
-  --previewShadow: #f0ead6;
+	--previewBg:rgb(251, 249, 243, 0.8);
+	--previewShadow:#f0ead6;
 
-  --buttonColor:black;
-}
+	--buttonColor:black;
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  scroll-behavior: smooth;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-strong {
-  font-family: "Russo One", sans-serif;
-  color: var(--mainText);
-  font-weight: 500;
+html, body{
+	padding: 0;
+	margin: 0;
+	scroll-behavior: smooth;
 }
 
-a,
-p,
-li,
-span,
-label,
-input,
-textarea {
-  color: var(--secondaryText);
-  font-family: "Roboto Mono", monospace;
+body *{
+	transition: 0.3s;
 }
 
-a {
-  text-decoration: none;
-  color: #17a2b8;
+h1, h2, h3, h4, h5, h6, strong{
+	color: var(--mainText);
+	font-family: 'Russo One', sans-serif;
+	font-weight: 500;
 }
 
-ul {
-  list-style: none;
+a, p, li, span, label, input, textarea{
+	color: var(--secondaryText);
+	font-family: 'Roboto Mono', monospace;
 }
 
-h1 {
-  font-size: 56px;
-}
-h2 {
-  font-size: 36px;
-}
-h3 {
-  font-size: 28px;
-}
-h4 {
-  font-size: 24px;
-}
-h5 {
-  font-size: 20px;
-}
-h6 {
-  font-size: 16px;
+a{
+	text-decoration: none;
+	color:#17a2b8;
 }
 
-.s1 {
-  background-color: var(--mainColor);
-  border-bottom: 1px solid var(--borderColor);
-  overflow: auto;
+ul{
+	list-style: none;
 }
 
-.s2 {
-  background-color: var(--secondaryColor);
-  border-bottom: 1px solid var(--borderColor);
-  overflow: auto;
+h1 { font-size: 56px;}
+h2 { font-size: 36px;}
+h3 { font-size: 28px;}
+h4 { font-size: 24px;}
+h5 { font-size: 20px;}
+h6 { font-size: 16px;}
+
+
+.s1{
+	background-color: var(--mainColor);
+	border-bottom:1px solid var(--borderColor);
+	overflow:auto;
 }
 
-.main-container {
-  width: 1200px;
-  margin: 0 auto;
+.s2{
+	background-color: var(--secondaryColor);
+	border-bottom:1px solid var(--borderColor);
+	overflow:auto;
 }
 
-.greeting-wrapper {
-  display: grid;
-  text-align: center;
-  align-content: center;
-  border: 2px dashed lightcoral;
-  min-height: 10em;
+.main-container{
+	width: 1200px;
+	margin: 0 auto;
 }
+
+
+.greeting-wrapper{
+	display: grid;
+	text-align: center;
+	align-content: center;
+	min-height: 10em;
+}
+
 
 .intro-wrapper {
   background-color: var(--secondaryColor);
@@ -161,6 +143,7 @@ h6 {
   height: 15px;
   width: 15px;
   border-radius: 50%;
+  margin: 5px;
 
   -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
